tests/error_display/hll_diagnostics_hmc.err.expected
error: at 15:5: [HMC-AssignToImmutable] In function 'assign_immutable': cannot assign to immutable binding 'x'
    |
 15 |     x = 2;
    |     ^
error: at 24:18: [HMC-BorrowImmutableAsMut] In function 'borrow_immutable_mut': cannot borrow immutable binding 'x' as mutable
    |
 24 |     let r = &mut x;
    |                  ^
error: at 33:11: [HMC-AssignToImmutable] In function 'defer_assign_immutable': cannot assign to immutable binding 'x'
    |
 33 |     defer x = 2;
    |           ^
